lab1/Test/L1-A-10-18.output
Error Type B at Line 5
Error Type B at Line 9
Error Type B at Line 13
Error Type B at Line 18
Error Type A at Line 32
Error Type B at Line 42
