lab1/Test/L1-A-10-18.cmm
struct {
  int b3qduzX39ZCn9 ;
  int bg ;
  struct {
    struct DwruddCZqTa2jPhe_x / yQXOcqozYt6m08bMYC 
      ;
    int DAN ;
  }N7K94hZ6BOHcpNb2G ;
  int ZRft ;== 
}q799hjw_DlH , NNFEAKJD3yY4 

;
struct FOMP || hCat7rWDL95zoV ( int gqF0o_qF6nHpPChbE3g 
  , struct HlXBQxjSn4QV88J0PpI {
}sJ ) {
  float f8Ieu [ 981801216 ] = TjqJVg6Nj8jFtuwoj = 
    c_Qm0x_PK6 - - GZ [ RZUFcNPpwQeozllU7Yc || JMdA && 
    svP < Fklv + tZCbS4z * UFVpfBHRRq int ( nX3QYzRr9QNpC5KnVUs 
    , kaGHLMSIDZSq1Sn != g / ( kfEiTXgADe = _1TGhDjU6 
    = KpYzVJH61xSwH = pDR1L == ! - ! fua7bNMkQAXK ( EJtNZKLM 
    >= mEh8wDNNJyutn ) <= ! mWva1KIp0qJ70dzjF + ! - - 
    dw . vx * 1017646605.661160221 ) > ! 820108684 . uwuWG 
    ) / ! j1W3VcRaRnaBS2Z3d ( ) ] , GRKyxfNArbrFnx3c ;
}
int ;
int hUJJsME9p ( ) {
  ZkKMtqSGVg4wo9AFz ;
  if ( rqg ) {
    L8ev4zuDVpzYtIIjLKfL ;
    zKmtANX_HXCQ ;
    if ( jwS8C )     P9lNTk ;
else     if ( xYvNM3Yq )     if ( v7xEzUcHZ5 ')     P2n66YlhKVhzVwgxBw9 
      ;
else     while ( Cw0ihbqKD9GhJ )     sV2VU ;


else     if ( LJjYSz_LnQlYFnJwIMt )     return gjJqkAbkrfX2aw1VN9v 
      ;



*   }
}
int ;
int XuBiugFCpUtu7Xk ( ) {
  a ;
}
